--- a/notebooks/diabetes_eda.ipynb
+++ b/notebooks/diabetes_eda.ipynb
@@ -1,14 +1,67 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1359e858",
+   "metadata": {
+    "papermill": {
+     "duration": 0.001535,
+     "end_time": "2025-09-17T18:20:48.582318",
+     "exception": false,
+     "start_time": "2025-09-17T18:20:48.580783",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python (ai311)",
+  "kaggle": {
+   "accelerator": "none",
+   "dataSources": [
+    {
+     "datasetId": 228,
+     "sourceId": 482,
+     "sourceType": "datasetVersion"
+    }
+   ],
+   "dockerImageVersionId": 31089,
+   "isGpuEnabled": false,
+   "isInternetEnabled": true,
    "language": "python",
-   "name": "ai311"
+   "sourceType": "notebook"
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.13"
+  },
+  "papermill": {
+   "default_parameters": {},
+   "duration": 8.692679,
+   "end_time": "2025-09-17T18:20:51.753019",
+   "environment_variables": {},
+   "exception": null,
+   "input_path": "__notebook__.ipynb",
+   "output_path": "__notebook__.ipynb",
+   "parameters": {},
+   "start_time": "2025-09-17T18:20:43.060340",
+   "version": "2.6.0"
   }
  },
  "nbformat": 4,
